fix: fixed text align in questions

--- a/component/Questions/Questions.module.sass
+++ b/component/Questions/Questions.module.sass
@@ -15,10 +15,12 @@
     color: white
     font-weight: 600
     font-size: 42px
+
   .questions_text
     color: white
     font-size: 16px
     text-align: center
+
   @media (max-width: 900px)
     margin: 60px auto 0
     .questions_title
@@ -38,6 +40,7 @@
 
   .accordion
     max-width: 660px
+
   .question
     width: 100%
     padding: 12px 16px
@@ -55,18 +58,23 @@
     line-height: 1
     font-weight: 500
     cursor: pointer
+
     & .question_icon
       transition: 0.3s ease transform
+
     &.active
       background: linear-gradient(88.32deg, rgb(0, 155, 255) -15.05%, rgb(94, 13, 255) 108.12%)
+
       & .question_icon
         transform: rotate(180deg)
 
   .answer_wrapper
     padding: 0 16px 16px
+
     .answer
       max-width: 660px
       font-size: 14px
+      text-align: left
       @media (max-width: 800px)
         font-size: 12px
 
@@ -80,11 +88,13 @@
     .question_container
       .question
         font-size: 16px
+
       .answer
-          font-size: 14px
+        font-size: 14px
   @media (max-width: 400px)
     .question_container
       .question
         font-size: 12px
+
       .answer
         font-size: 8px
